--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#E1E1E1">
 
 
         <LinearLayout
@@ -22,38 +23,41 @@
                 android:id="@+id/timer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="00:00:00"
-                android:textSize="50dp" />
+                android:textSize="100dp"
+                android:textColor="#00DC5A"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="170dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4"
             android:orientation="horizontal">
 
 
             <Button
                 android:id="@+id/btn_start"
+                style="@style/startButton"
                 android:layout_width="match_parent"
-                android:layout_height="97dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="StartClick"
                 android:text="Start" />
 
             <Button
                 android:id="@+id/btn_stop"
+                style="@style/button"
                 android:layout_width="match_parent"
-                android:layout_height="98dp"
                 android:layout_weight="1"
                 android:onClick="StopClick"
                 android:text="Stop" />
 
             <Button
                 android:id="@+id/btn_reset"
+                style="@style/button"
                 android:layout_width="match_parent"
-                android:layout_height="98dp"
                 android:layout_weight="1"
                 android:onClick="ResetClick"
                 android:text="Reset" />
@@ -71,7 +75,8 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/digitalClock"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="35dp" />
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center"/>
 
 
 
