--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBlack">#000000</color>
     <color name="colorwhite">#FFFFFF</color>
+    <color name="colorChrono">#00C723</color>
 
 
 </resources>
