--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,8 +100,7 @@
                 <TextView
                     android:id="@+id/laps_text"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="" />
+                    android:layout_height="match_parent" />
             </ScrollView>
         </LinearLayout>
         <LinearLayout
